@@ -23,3 +23,4 @@
 * improve error handling
 * more portable tests (denoise)
 * improve python ELEMENT access
+* suspend python2 testing
